# epiworldPythonStreamlit

./: .gitignore  AGENTS.md  Makefile  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: containerfile.yml  copilot-setup-steps.yml  copilot.yml  deploy_pages.yml  on_pr.yml  tests.yml
docs/: index.md
models/: measles_outbreak.py
scripts/: build.py
src/epicc/: __main__.py
src/epicc/formats/: __init__.py  base.py  xlsx.py  yaml.py
src/epicc/model/: __init__.py  ast_validator.py  base.py  evaluator.py  factory.py  parameters.py  schema.py
src/epicc/model/models/: __init__.py  measles.yaml  tb_isolation.yaml
src/epicc/models/: measles_outbreak.py  tb_isolation.py  tb_isolation.yaml
src/epicc/ui/: __init__.py  export.py  parameters.py  report.py  sections.py  state.py  styles.py
src/epicc/utils/: excel_model_runner.py  parameter_loader.py  parameter_ui.py
src/epicc/web/: sidebar.css
tests/: test_measles_outbreak.py  test_parameter_loader.py  test_tb_isolation.py
tests/epicc/: test_ast_validator.py  test_evaluator.py  test_formats.py  test_formats_template.py  test_formats_xlsx.py  test_formats_yaml.py  test_interpreted_model.py  test_loader.py
